# CurrencyConverter/src/main/java/com/conichi/currency/converter/feignclient/CurrencyLayerAPI.java
@@ -5,8 +5,7 @@ import static com.conichi.currency.converter.constant.URLS.ACCESS_KEY_VALUE;
 import static com.conichi.currency.converter.constant.URLS.CURRENCYCONV_API_CONVERT;
 import static com.conichi.currency.converter.constant.URLS.QUERY_KEY;
 import static com.conichi.currency.converter.constant.URLS.ULTRA_COMPACT;
-
-import com.google.gson.JsonObject;
+import com.example.model.ResponseConvertDto;
 
 import feign.Param;
 import feign.RequestLine;
@@ -20,6 +19,6 @@ public interface CurrencyLayerAPI {
 
 	@RequestLine("GET " + CURRENCYCONV_API_CONVERT + QUERY_KEY + "={from}_{to}"+ "&" + ACCESS_KEY + "="
 			+ ACCESS_KEY_VALUE + "&" + ULTRA_COMPACT)
-	JsonObject currencyConverter(@Param("from") String from, @Param("to") String to);
+	ResponseConvertDto currencyConverter(@Param("from") String from, @Param("to") String to);
 
 }
